@@ -49,6 +49,9 @@ int evrTimeGetFromEdef    (unsigned int     edefIdx,
 int evrTimeGet            (epicsTimeStamp  *epicsTime_ps,
                            unsigned int     eventCode);
 
+int evrTimePutPulseID     (epicsTimeStamp  *epicsTime_ps, 
+                           unsigned int    pulseID);
+
 
 
 #ifdef __cplusplus
